2014-08-26  Maciej Stachowiak  <mjs@apple.com>

        Use RetainPtr::autorelease in some places where it seems appropriate
        https://bugs.webkit.org/show_bug.cgi?id=136280

        Reviewed by Darin Adler.

        * Shared/Cocoa/WKNSURLExtras.mm:
        (urlWithWTFString): Use autorelease() instead of CFBridgingRelease(leakRef())

2014-08-29  Tim Horton  <timothy_horton@apple.com>

        More occasional crashes in ServicesController::resfreshExistingServices
        https://bugs.webkit.org/show_bug.cgi?id=136387
        <rdar://problem/18167200>

        Reviewed by Dan Bernstein.

        * UIProcess/mac/ServicesController.mm:
        (WebKit::ServicesController::ServicesController):
        Speculative fix; if this block is called synchronously, we'll end up
        calling back into ::shared() before the NeverDestroyed is initialized,
        ending up with two ServicesControllers.

2014-08-29  Alexey Proskuryakov  <ap@apple.com>

        Crashes in IPC code under VisitedLinkProvider::pendingVisitedLinksTimerFired
        https://bugs.webkit.org/show_bug.cgi?id=136384
        rdar://problem/16991213

        Reviewed by Sam Weinig.

        VisitedLinkProvider process tracking relied on a combination of WebPageProxy process
        lifecycle notifications and checking process state. As evidenced by multiple FIXMEs,
        these are not yet as reliable as they should be.
        
        Changed to unregister a process when it closes, not when it no longer has any pages
        using the particular VisitedLinkProvider or WebUserContentControllerProxy. This
        is a deoptimization that should not matter in practice.

        * UIProcess/UserContent/WebUserContentControllerProxy.cpp:
        (WebKit::WebUserContentControllerProxy::~WebUserContentControllerProxy):
        (WebKit::WebUserContentControllerProxy::removeProcess):
        (WebKit::WebUserContentControllerProxy::addUserScript):